--- a/src/sample/LBT/labtests.fxml
+++ b/src/sample/LBT/labtests.fxml
@@ -7,35 +7,30 @@
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.StackPane?>
 
-
-<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0"
-           prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="sample.LBT.labtestsController">
-   <Button fx:id="backBTN" mnemonicParsing="false" onAction="#callBack" text="Back" StackPane.alignment="TOP_LEFT">
+<StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" stylesheets="@../Styles/style7.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.LBT.labtestsController">
+   <Button fx:id="backBTN" mnemonicParsing="false" onAction="#callBack" prefWidth="100.0" text="Back" StackPane.alignment="TOP_LEFT">
       <StackPane.margin>
-         <Insets left="20.0" top="20.0"/>
+         <Insets left="20.0" top="20.0" />
       </StackPane.margin>
    </Button>
-   <TextField fx:id="patientIDTxt" maxWidth="200.0" promptText="Search Patient (Patient ID)"
-              StackPane.alignment="TOP_CENTER">
+   <TextField fx:id="patientIDTxt" maxWidth="200.0" prefHeight="40.0" promptText="Search Patient (Patient ID)" StackPane.alignment="TOP_CENTER">
       <StackPane.margin>
-         <Insets right="70.0" top="20.0"/>
+         <Insets right="70.0" top="20.0" />
       </StackPane.margin>
    </TextField>
-   <Button fx:id="searchBTN" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#callSearch"
-           StackPane.alignment="TOP_CENTER">
+   <Button fx:id="searchBTN" layoutX="30.0" layoutY="30.0" mnemonicParsing="false" onAction="#callSearch" StackPane.alignment="TOP_CENTER">
       <graphic>
          <ImageView fitHeight="15.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
-            <Image url="@../Assets/search.png"/>
+            <Image url="@../Assets/search.png" />
          </ImageView>
       </graphic>
       <StackPane.margin>
-         <Insets left="200.0" top="20.0"/>
+         <Insets left="200.0" top="30.0" />
       </StackPane.margin>
    </Button>
    <StackPane fx:id="innerStackPane" prefHeight="150.0" prefWidth="200.0">
       <StackPane.margin>
-         <Insets top="65.0"/>
+         <Insets top="65.0" />
       </StackPane.margin>
    </StackPane>
 </StackPane>
