--- a/src/sample/MDC/dashboard.fxml
+++ b/src/sample/MDC/dashboard.fxml
@@ -1,31 +1,37 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
+<?import javafx.geometry.Insets?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.effect.DropShadow?>
-<?import javafx.scene.image.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
-<StackPane fx:id="mainpane" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MDC.dashboardController">
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.HBox?>
+<?import javafx.scene.layout.StackPane?>
+<?import javafx.scene.paint.Color?>
+<?import javafx.scene.text.Font?>
+
+<StackPane fx:id="mainpane" prefHeight="600.0" prefWidth="800.0" stylesheets="@../Styles/style7.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.MDC.dashboardController">
    <Label text="dashboard" />
-   <StackPane maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" StackPane.alignment="TOP_CENTER">
-      <Button fx:id="medicineBillBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callMedicineBill" text="Medicine Bill" StackPane.alignment="TOP_LEFT">
+   <StackPane fx:id="navbarStackpane" maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" stylesheets="@../Styles/navbar.css" StackPane.alignment="TOP_CENTER">
+      <Button fx:id="medicineBillBTN" minHeight="25.0" mnemonicParsing="false" onAction="#callMedicineBill" text="Medicine Bill" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="190.0" top="7.0" />
+            <Insets left="190.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="dashboardBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callDashboard" text="DashBoard" StackPane.alignment="TOP_LEFT">
+      <Button fx:id="dashboardBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callDashboard" text="DashBoard" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <font>
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets left="110.0" top="7.0" />
+            <Insets left="110.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="logOutBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callLogOut" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="18.0" fitWidth="27.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/logoutDark.png" />
@@ -35,10 +41,10 @@
             <Font size="10.0" />
          </font>
          <StackPane.margin>
-            <Insets right="15.0" top="7.0" />
+            <Insets />
          </StackPane.margin>
       </Button>
-      <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" StackPane.alignment="TOP_LEFT">
+      <Label prefHeight="16.0" prefWidth="99.0" text="OSPITALITY" textFill="WHITE" StackPane.alignment="TOP_LEFT">
          <padding>
             <Insets left="10.0" />
          </padding>
@@ -49,7 +55,7 @@
             <Insets top="11.0" />
          </StackPane.margin>
       </Label>
-      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="settingsBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callSettings" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <font>
             <Font size="10.0" />
          </font>
@@ -59,10 +65,10 @@
             </ImageView>
          </graphic>
          <StackPane.margin>
-            <Insets right="55.0" top="7.0" />
+            <Insets right="40.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="notificationBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callNotifications" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="20.0" fitWidth="38.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/notificationDark.png" />
@@ -72,10 +78,10 @@
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="95.0" top="7.0" />
+            <Insets right="80.0" />
          </StackPane.margin>
       </Button>
-      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="25.0" minWidth="25.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
+      <Button fx:id="chatBubbleBTN" maxHeight="25.0" maxWidth="25.0" minHeight="40.0" minWidth="40.0" mnemonicParsing="false" onAction="#callChatBubble" prefHeight="25.0" prefWidth="25.0" StackPane.alignment="TOP_RIGHT">
          <graphic>
             <ImageView fitHeight="21.0" fitWidth="24.0" pickOnBounds="true" preserveRatio="true">
                <Image url="@../Assets/chatDark.png" />
@@ -85,86 +91,146 @@
             <Font size="9.0" />
          </font>
          <StackPane.margin>
-            <Insets right="135.0" top="7.0" />
+            <Insets right="120.0" />
          </StackPane.margin>
       </Button>
    </StackPane>
    <StackPane>
       <StackPane.margin>
-         <Insets top="40.0"/>
+         <Insets top="40.0" />
       </StackPane.margin>
-      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;"
-                 StackPane.alignment="TOP_CENTER">
+      <StackPane maxHeight="180.0" prefHeight="150.0" prefWidth="200.0" style="-fx-background-color: #16ff9e;" StackPane.alignment="TOP_CENTER">
          <StackPane.margin>
-            <Insets left="20.0" right="20.0" top="20.0"/>
+            <Insets left="20.0" right="20.0" top="20.0" />
          </StackPane.margin>
          <effect>
-            <DropShadow/>
+            <DropShadow />
          </effect>
-         <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL              : "
-                textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="195.0" top="60.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="35.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="CONTACT NO. : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="195.0" top="95.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" minWidth="110.0" style="-fx-text-fill: black;"
-                text="JOINING DATE : " textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="195.0" top="130.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label alignment="CENTER" layoutX="30.0" layoutY="60.0" maxWidth="110.0" minWidth="110.0"
-                style="-fx-text-fill: black;" text="DESIGNATIION : " textAlignment="CENTER"
-                StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="195.0" top="25.0"/>
-            </StackPane.margin>
-         </Label>
-         <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;"
-                     StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets/>
-            </StackPane.margin>
-            <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0"
-                       pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0"
-                       AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
-               <Image url="@../Assets/user.jpeg"/>
-            </ImageView>
-            <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0"
-                   style="-fx-text-fill: black;" text="Name" textAlignment="CENTER"/>
-            <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0"
-                   prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER"/>
-         </AnchorPane>
-         <Label fx:id="designationTxt" alignment="CENTER" layoutX="205.0" layoutY="35.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="310.0" top="25.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label fx:id="emailTxt" alignment="CENTER" layoutX="205.0" layoutY="60.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="310.0" top="60.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label fx:id="phnoTxt" alignment="CENTER" layoutX="205.0" layoutY="85.0" style="-fx-text-fill: black;" text="l"
-                textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="310.0" top="95.0"/>
-            </StackPane.margin>
-         </Label>
-         <Label fx:id="joiningDateTxt" alignment="CENTER" layoutX="205.0" layoutY="110.0" style="-fx-text-fill: black;"
-                text="l" textAlignment="CENTER" StackPane.alignment="TOP_LEFT">
-            <StackPane.margin>
-               <Insets left="310.0" top="130.0"/>
-            </StackPane.margin>
-         </Label>
+         <children>
+            <HBox maxHeight="180.0" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="180.0" prefWidth="760.0" spacing="20.0" style="-fx-background-color: #16ff9e;">
+               <children>
+                  <AnchorPane maxHeight="180.0" maxWidth="150.0" style="-fx-background-color: #16FF9E;">
+                     <children>
+                        <ImageView fx:id="userImg" fitHeight="100.0" fitWidth="100.0" layoutX="25.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true" AnchorPane.leftAnchor="25.0" AnchorPane.rightAnchor="25.0" AnchorPane.topAnchor="25.0">
+                           <image>
+                              <Image url="@../Assets/user.jpeg" />
+                           </image>
+                           <effect>
+                              <DropShadow height="102.96" radius="46.427499999999995" width="84.75">
+                                 <color>
+                                    <Color red="0.05882352963089943" green="0.364705890417099" blue="0.21568627655506134" />
+                                 </color>
+                              </DropShadow>
+                           </effect>
+                        </ImageView>
+                        <Label fx:id="userNameTxt" alignment="CENTER" layoutY="136.0" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Name" textAlignment="CENTER" />
+                        <Label fx:id="roleTxt" alignment="CENTER" layoutY="158.0" opacity="0.63" prefHeight="16.0" prefWidth="156.0" style="-fx-text-fill: black;" text="Role" textAlignment="CENTER" />
+                     </children>
+                     <HBox.margin>
+                        <Insets left="-20.0" top="-20.0" />
+                     </HBox.margin>
+                  </AnchorPane>
+                  <StackPane maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #16ff9e; -fx-background-radius: 50;">
+                     <effect>
+                        <DropShadow height="93.12" radius="46.245000000000005" width="93.86">
+                           <color>
+                              <Color red="0.05882352963089943" green="0.364705890417099" blue="0.21568627655506134" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                     <children>
+                        <Label alignment="CENTER" maxWidth="110.0" minWidth="110.0" style="-fx-text-fill: black;" text="DESIGNATION" textAlignment="CENTER" textOverrun="CLIP" underline="true" StackPane.alignment="TOP_CENTER">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <StackPane.margin>
+                              <Insets top="15.0" />
+                           </StackPane.margin>
+                        </Label>
+                        <Label fx:id="designationTxt" alignment="CENTER" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" />
+                     </children>
+                  </StackPane>
+                  <StackPane maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #16ff9e; -fx-background-radius: 50;">
+                     <effect>
+                        <DropShadow height="93.12" radius="46.245000000000005" width="93.86">
+                           <color>
+                              <Color red="0.05882352963089943" green="0.364705890417099" blue="0.21568627655506134" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                     <children>
+                        <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="EMAIL" textAlignment="CENTER" underline="true" StackPane.alignment="TOP_CENTER">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <StackPane.margin>
+                              <Insets top="15.0" />
+                           </StackPane.margin>
+                        </Label>
+                        <Label fx:id="emailTxt" alignment="CENTER" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" />
+                     </children>
+                  </StackPane>
+                  <StackPane maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #16ff9e; -fx-background-radius: 50;">
+                     <effect>
+                        <DropShadow height="93.12" radius="46.245000000000005" width="93.86">
+                           <color>
+                              <Color red="0.05882352963089943" green="0.364705890417099" blue="0.21568627655506134" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                     <children>
+                        <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="CONTACT NO" textAlignment="CENTER" underline="true" StackPane.alignment="TOP_CENTER">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <StackPane.margin>
+                              <Insets top="15.0" />
+                           </StackPane.margin>
+                        </Label>
+                        <Label fx:id="phnoTxt" alignment="CENTER" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" />
+                     </children>
+                  </StackPane>
+                  <StackPane maxHeight="100.0" maxWidth="1.7976931348623157E308" prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #16ff9e; -fx-background-radius: 50;">
+                     <effect>
+                        <DropShadow height="93.12" radius="46.245000000000005" width="93.86">
+                           <color>
+                              <Color red="0.05882352963089943" green="0.364705890417099" blue="0.21568627655506134" />
+                           </color>
+                        </DropShadow>
+                     </effect>
+                     <HBox.margin>
+                        <Insets top="10.0" />
+                     </HBox.margin>
+                     <children>
+                        <Label alignment="CENTER" minWidth="110.0" style="-fx-text-fill: black;" text="JOINING DATE" textAlignment="CENTER" underline="true" StackPane.alignment="TOP_CENTER">
+                           <effect>
+                              <DropShadow />
+                           </effect>
+                           <StackPane.margin>
+                              <Insets top="15.0" />
+                           </StackPane.margin>
+                        </Label>
+                        <Label fx:id="joiningDateTxt" alignment="CENTER" style="-fx-text-fill: black;" text="l" textAlignment="CENTER" />
+                     </children>
+                  </StackPane>
+               </children>
+               <padding>
+                  <Insets bottom="20.0" left="20.0" right="20.0" top="20.0" />
+               </padding>
+               <effect>
+                  <DropShadow />
+               </effect>
+            </HBox>
+         </children>
       </StackPane>
    </StackPane>
    <StackPane.margin>
