--- a/src/sample/RCP/appointment.fxml
+++ b/src/sample/RCP/appointment.fxml
@@ -1,17 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.String?>
+<?import javafx.collections.FXCollections?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.ComboBox?>
+<?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.SplitPane?>
+<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.Tab?>
+<?import javafx.scene.control.TabPane?>
+<?import javafx.scene.control.TextField?>
+<?import javafx.scene.effect.DropShadow?>
+<?import javafx.scene.effect.Glow?>
+<?import javafx.scene.effect.Reflection?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
-<?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="mainpane" prefHeight="400.0" prefWidth="600.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.appointmentController">
+<StackPane fx:id="mainpane" prefHeight="600.0" prefWidth="800.0" stylesheets="@../Styles/style3.css" xmlns="http://javafx.com/javafx/16" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.RCP.appointmentController">
     <StackPane fx:id="navbarStackpane" maxHeight="40.0" prefHeight="40.0" prefWidth="600.0" stylesheets="@../Styles/navbar.css" StackPane.alignment="TOP_CENTER">
         <Button fx:id="appointmentBTN" disable="true" minHeight="25.0" mnemonicParsing="false" onAction="#callAppointment" prefWidth="80.0" text="Appointment" StackPane.alignment="TOP_LEFT">
             <font>
@@ -101,14 +110,179 @@
             </StackPane.margin>
         </Button>
     </StackPane>
-    <SplitPane dividerPositions="0.29797979797979796" prefHeight="160.0" prefWidth="200.0">
-        <StackPane.margin>
-            <Insets top="40.0" />
-        </StackPane.margin>
-        <AnchorPane maxWidth="175.0" minHeight="0.0" minWidth="175.0" prefHeight="160.0" prefWidth="175.0">
-            <Button fx:id="newAppointmentBTN" layoutX="-1.0" layoutY="1.0" maxHeight="40.0" minHeight="40.0" mnemonicParsing="false" onAction="#callNewAppointment" prefHeight="40.0" prefWidth="175.0" text="New Appointment" AnchorPane.topAnchor="0.0" />
-            <Button fx:id="modifyAppointmentBTN" layoutX="-2.0" layoutY="40.0" maxHeight="40.0" minHeight="40.0" mnemonicParsing="false" onAction="#callModifyAppointment" prefHeight="40.0" prefWidth="175.0" text="Modify Appointment" AnchorPane.topAnchor="40.0" />
-        </AnchorPane>
-        <BorderPane fx:id="appointmentPane" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" />
-    </SplitPane>
+   <TabPane fx:id="tabPane" prefHeight="200.0" prefWidth="200.0" stylesheets="@../Styles/style.css" tabClosingPolicy="UNAVAILABLE">
+     <tabs>
+       <Tab text="New Appointment">
+         <content>
+               <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="500.0" prefWidth="600.0" stylesheets="@../Styles/style7.css">
+                  <Label style="-fx-text-fill: white;" text="Patient ID" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets bottom="210.0" right="333.0" />
+                     </StackPane.margin>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </Label>
+                  <TextField fx:id="patientIDTxt1" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="100.0" prefHeight="40.0" prefWidth="300.0" promptText="patient id" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets bottom="160.0" right="100.0" />
+                     </StackPane.margin>
+                  </TextField>
+                  <Label layoutX="60.0" layoutY="102.0" prefHeight="16.0" prefWidth="106.0" style="-fx-text-fill: white;" text="Department" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets bottom="50.0" right="290.0" />
+                     </StackPane.margin>
+                     <padding>
+                        <Insets right="25.0" />
+                     </padding>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </Label>
+                  <ComboBox fx:id="chooseDepartmentCB" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="100.0" prefHeight="40.0" prefWidth="300.0" promptText="role" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets right="100.0" />
+                     </StackPane.margin>
+                     <items>
+                        <FXCollections fx:factory="observableArrayList">
+                           <String fx:value="Pediatrician" />
+                           <String fx:value="Dermatologist" />
+                           <String fx:value="Ophthalmologist" />
+                           <String fx:value="Psychiatrist" />
+                           <String fx:value="Allergist/Immunologist" />
+                           <String fx:value="Urologist" />
+                           <String fx:value="Neurologist" />
+                           <String fx:value="Cardiologist" />
+                           <String fx:value="Otolaryngologist" />
+                           <String fx:value="Endocrinologist" />
+                           <String fx:value="Podiatrist" />
+                        </FXCollections>
+                     </items>
+                  </ComboBox>
+                  <Button fx:id="newPatientBTN" mnemonicParsing="false" onAction="#callNewPatient" prefWidth="100.0" text="New Patient" StackPane.alignment="TOP_RIGHT">
+                     <StackPane.margin>
+                        <Insets right="20.0" top="20.0" />
+                     </StackPane.margin>
+                  </Button>
+                  <Button fx:id="submitBTN" layoutX="463.0" layoutY="30.0" maxWidth="-Infinity" minWidth="100.0" mnemonicParsing="false" onAction="#callSubmit" prefWidth="300.0" text="Submit" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets right="100.0" top="300.0" />
+                     </StackPane.margin>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <DatePicker fx:id="datePicker1" maxHeight="-Infinity" maxWidth="-Infinity" minWidth="100.0" prefHeight="40.0" prefWidth="300.0" promptText="date of appointment" showWeekNumbers="true" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets right="100.0" top="160.0" />
+                     </StackPane.margin>
+                  </DatePicker>
+                  <Label layoutX="60.0" layoutY="152.0" prefHeight="16.0" prefWidth="54.0" style="-fx-text-fill: white;" text="Date" StackPane.alignment="CENTER_RIGHT">
+                     <StackPane.margin>
+                        <Insets right="360.0" top="110.0" />
+                     </StackPane.margin>
+                     <padding>
+                        <Insets left="20.0" />
+                     </padding>
+                     <effect>
+                        <Glow />
+                     </effect>
+                  </Label>
+                  <Label text="NEW APPOINTMENT" StackPane.alignment="TOP_CENTER">
+                     <StackPane.margin>
+                        <Insets top="50.0" />
+                     </StackPane.margin>
+                     <font>
+                        <Font size="27.0" />
+                     </font>
+                     <effect>
+                        <Reflection topOpacity="0.21" />
+                     </effect>
+                  </Label>
+                  <Label fx:id="successTxt" style="-fx-text-fill: #44f129;" textFill="#44f229" StackPane.alignment="CENTER">
+                     <StackPane.margin>
+                        <Insets top="200.0" />
+                     </StackPane.margin>
+                     <font>
+                        <Font size="20.0" />
+                     </font>
+                  </Label>
+               </StackPane>
+         </content>
+       </Tab>
+       <Tab text="Modify Appointment">
+         <content>
+               <StackPane maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="600.0" stylesheets="@../Styles/style7.css">
+                  <TextField fx:id="patientIDTxt" maxWidth="300.0" minWidth="100.0" promptText="Enter Patient ID" StackPane.alignment="TOP_CENTER">
+                     <StackPane.margin>
+                        <Insets top="40.0" />
+                     </StackPane.margin>
+                  </TextField>
+                  <Button fx:id="searchBTN" mnemonicParsing="false" onAction="#callSearch" prefWidth="100.0" text="search" StackPane.alignment="TOP_CENTER">
+                     <StackPane.margin>
+                        <Insets left="450.0" top="40.0" />
+                     </StackPane.margin>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <Button fx:id="saveBTN" layoutX="404.0" layoutY="50.0" mnemonicParsing="false" onAction="#callSave" prefWidth="100.0" text="save" StackPane.alignment="BOTTOM_RIGHT">
+                     <StackPane.margin>
+                        <Insets bottom="30.0" right="200.0" />
+                     </StackPane.margin>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <Button fx:id="deleteBTN" layoutX="348.0" layoutY="354.0" mnemonicParsing="false" onAction="#callDelete" prefWidth="100.0" text="delete" StackPane.alignment="BOTTOM_RIGHT">
+                     <StackPane.margin>
+                        <Insets bottom="30.0" right="50.0" />
+                     </StackPane.margin>
+                     <effect>
+                        <DropShadow />
+                     </effect>
+                  </Button>
+                  <StackPane fx:id="innerStack" maxHeight="1.7976931348623157E308" maxWidth="1.7976931348623157E308" prefHeight="150.0" prefWidth="200.0" style="-fx-border-color: #464546;" visible="false" StackPane.alignment="CENTER">
+                     <StackPane.margin>
+                        <Insets bottom="80.0" top="100.0" />
+                     </StackPane.margin>
+                     <AnchorPane maxWidth="210.0" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: inherit;" StackPane.alignment="CENTER_LEFT">
+                        <ListView fx:id="appointmentList" editable="true" layoutX="8.0" layoutY="-12.0" maxWidth="1.7976931348623157E308" onMouseClicked="#callGetAppointment" prefHeight="200.0" prefWidth="200.0" style="-fx-border-color: inherit;" stylesheets="@../Styles/style3.css" AnchorPane.bottomAnchor="20.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="50.0" />
+                        <Label fx:id="patientName" layoutX="58.0" layoutY="6.0" text="patientName" />
+                        <Label layoutX="42.0" layoutY="28.0" text="Appointments List" />
+                     </AnchorPane>
+                     <ComboBox fx:id="departmentCB" prefHeight="40.0" prefWidth="300.0">
+                        <StackPane.margin>
+                           <Insets bottom="80.0" />
+                        </StackPane.margin>
+                        <items>
+                           <FXCollections fx:factory="observableArrayList">
+                              <String fx:value="Pediatrician" />
+                              <String fx:value="Dermatologist" />
+                              <String fx:value="Ophthalmologist" />
+                              <String fx:value="Psychiatrist" />
+                              <String fx:value="Allergist/Immunologist" />
+                              <String fx:value="Urologist" />
+                              <String fx:value="Neurologist" />
+                              <String fx:value="Cardiologist" />
+                              <String fx:value="Otolaryngologist" />
+                              <String fx:value="Endocrinologist" />
+                              <String fx:value="Podiatrist" />
+                           </FXCollections>
+                        </items>
+                     </ComboBox>
+                     <DatePicker fx:id="datePicker" editable="false" prefHeight="40.0" prefWidth="300.0">
+                        <StackPane.margin>
+                           <Insets top="80.0" />
+                        </StackPane.margin>
+                     </DatePicker>
+                  </StackPane>
+               </StackPane>
+         </content>
+       </Tab>
+     </tabs>
+      <StackPane.margin>
+         <Insets top="40.0" />
+      </StackPane.margin>
+   </TabPane>
 </StackPane>
