--- a/src/sample/Styles/style.css
+++ b/src/sample/Styles/style.css
@@ -22,6 +22,11 @@
     -fx-background-color: #403434;
 }
 
+.combo-box-base:hover{
+    -fx-background-color: #403434;
+
+}
+
 #noLogOutBtn:hover{
     -fx-text-fill: aqua;
 
@@ -45,11 +50,11 @@
     -fx-background-color: transparent;
     -fx-border-width: 0px 0px 1px 0px;
     -fx-border-color: #2b2121;
+
 }
 
 .tab:hover{
     -fx-background-color: #403434;
-
 }
 
 .tab:selected{
