--- a/src/sample/chatBubble.fxml
+++ b/src/sample/chatBubble.fxml
@@ -11,67 +11,61 @@
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.text.Font?>
 
-<StackPane fx:id="mainpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity"
-           prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: blue;"
-           xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1"
-           fx:controller="sample.chatBubbleController">
+<StackPane fx:id="mainpane" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="300.0" style="-fx-background-color: blue;" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="sample.chatBubbleController">
    <effect>
-      <DropShadow/>
+      <DropShadow />
    </effect>
    <ScrollPane fx:id="listPane" prefHeight="200.0" prefWidth="200.0" StackPane.alignment="TOP_CENTER">
       <StackPane.margin>
-         <Insets bottom="2.0" left="2.0" right="2.0" top="20.0"/>
+         <Insets bottom="2.0" left="2.0" right="2.0" top="20.0" />
       </StackPane.margin>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </ScrollPane>
    <ScrollPane fx:id="chatBox" prefHeight="200.0" prefWidth="200.0" StackPane.alignment="BOTTOM_CENTER">
       <StackPane.margin>
-         <Insets bottom="5.0" left="5.0" right="5.0" top="200.0"/>
+         <Insets bottom="5.0" left="5.0" right="5.0" top="200.0" />
       </StackPane.margin>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </ScrollPane>
    <TextField fx:id="textToSend" onKeyPressed="#callCheckEnter" StackPane.alignment="BOTTOM_CENTER">
       <StackPane.margin>
-         <Insets bottom="20.0" left="10.0" right="50.0"/>
+         <Insets bottom="20.0" left="10.0" right="50.0" />
       </StackPane.margin>
    </TextField>
-   <Button fx:id="sendBtn" alignment="BOTTOM_RIGHT" mnemonicParsing="false" onAction="#callSend"
-           style="-fx-background-color: transparent;" StackPane.alignment="BOTTOM_RIGHT">
+   <Button fx:id="sendBtn" alignment="BOTTOM_RIGHT" mnemonicParsing="false" onAction="#callSend" style="-fx-background-color: transparent;" StackPane.alignment="BOTTOM_RIGHT">
       <StackPane.margin>
-         <Insets bottom="20.0" right="10.0"/>
+         <Insets bottom="20.0" right="10.0" />
       </StackPane.margin>
       <graphic>
          <ImageView fitHeight="32.0" fitWidth="15.0" pickOnBounds="true" preserveRatio="true">
             <effect>
-               <Glow/>
+               <Glow />
             </effect>
-            <Image url="@Assets/send.png"/>
+            <Image url="@Assets/send.png" />
          </ImageView>
       </graphic>
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
    </Button>
-   <Button fx:id="closeChatBtn" mnemonicParsing="false" onAction="#callCloseChat"
-           style="-fx-background-color: transparent;" text="X" StackPane.alignment="TOP_RIGHT">
+   <Button fx:id="closeChatBtn" mnemonicParsing="false" onAction="#callCloseChat" style="-fx-background-color: transparent;" text="X" textFill="WHITE" StackPane.alignment="TOP_RIGHT">
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
       <font>
-         <Font size="9.0"/>
+         <Font size="9.0" />
       </font>
    </Button>
-   <Button fx:id="backBtn" layoutX="291.0" layoutY="10.0" mnemonicParsing="false" onAction="#callCloseChat"
-           style="-fx-background-color: transparent;" text="&lt;" StackPane.alignment="TOP_LEFT">
+   <Button fx:id="backBtn" layoutX="291.0" layoutY="10.0" mnemonicParsing="false" onAction="#callCloseChat" style="-fx-background-color: transparent;" text="&lt;" textFill="WHITE" StackPane.alignment="TOP_LEFT">
       <effect>
-         <DropShadow/>
+         <DropShadow />
       </effect>
       <font>
-         <Font size="10.0"/>
+         <Font size="10.0" />
       </font>
    </Button>
 </StackPane>
